--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -4,8 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-blog-post/blob/master/LICENSE)
  */
 body {
-  padding-top: 0px;
-  margin: 2%;
+  margin: 1%;
+  margin-top: 0px;
 }
 
 img {
