--- a/carousel/carousel/carousel.css
+++ b/carousel/carousel/carousel.css
@@ -26,12 +26,17 @@ body {
 .carousel-item {
   height: 32rem;
 }
-.carousel-item > img {
+.carousel-item > svg > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 32rem;
+}
+
+featurette-image > svg > img {
+  width: 100%;
+  height: 100%;
 }
 
 
