--- a/cookbook_minimal/carousel/carousel.css
+++ b/cookbook_minimal/carousel/carousel.css
@@ -2,6 +2,11 @@
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
+main{
+    position: relative;
+    top: 56px;
+}
+
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
